--- a/ssr-movieSite/package.json
+++ b/ssr-movieSite/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
+    "sass": "sass --no-source-map src/main.scss static/main.css",
+    "watch": "sass --no-source-map --watch src/main.scss static/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +17,8 @@
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "marked": "^4.2.12",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "node-sass": "^8.0.0",
+    "sass": "^1.57.1"
   }
 }
