--- a/ssr-movieSite/package.json
+++ b/ssr-movieSite/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon index.js",
     "sass": "sass --no-source-map src/main.scss static/main.css",
     "watch": "sass --no-source-map --watch src/main.scss static/main.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +20,10 @@
     "node-fetch": "^3.3.0",
     "node-sass": "^8.0.0",
     "sass": "^1.57.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.4.0",
+    "supertest": "^6.3.3"
   }
 }
