--- a/fullstark-woordle/backend/package.json
+++ b/fullstark-woordle/backend/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": " nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yvette",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
 }
