--- a/fullstark-woordle/backend/package.json
+++ b/fullstark-woordle/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "handlebars": "^4.7.7",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
